--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,16 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: trojan
-    server: cn22.firewoodzz.com
-    port: 35008
-    udp: true
-    password: 7c266797-c2f6-43cf-8cdb-3e3a8e67de8b
-    sni: updates.sub-nthu.com
-    skip-cert-verify: true
-    network: tcp
-  - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
     server: www.coldstone.club
@@ -30,7 +20,7 @@ proxies:
       path: /
       headers:
         host: www.coldstone.club
-  - &id003
+  - &id002
     name: 🇺🇸_US_美国_2
     type: vmess
     server: www.crispyrainbow.biz
@@ -45,75 +35,8 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id004
-    name: 🇺🇦_UA_乌克兰
-    type: vmess
-    server: 185.158.211.186
-    port: 80
-    cipher: auto
-    uuid: b82493e3-07b4-4cf2-b585-965575cfeb32
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@forwardv2ray
-      headers:
-        host: softiri.serveirc.com
-  - &id005
-    name: 🇨🇳_CN_中国
-    type: ss
-    server: service.ouluyun9803.com
-    port: 21003
-    password: cfa17a0d-5e7d-4871-976e-f116e0818123
-    cipher: chacha20-ietf-poly1305
-  - &id006
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10848
-    udp: true
-    password: 3e5d1046-5807-4b79-8397-31a006f546d1
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 5.104.108.109
-    port: 443
-    udp: true
-    password: 56e1f11c-1217-46ab-b127-6afbc23bafba
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 5.104.108.120
-    port: 443
-    udp: true
-    password: 56e1f11c-1217-46ab-b127-6afbc23bafba
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id009
+  - &id003
     name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 172.67.217.144
-    port: 80
-    cipher: auto
-    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lv1.xv2ray.net
-  - &id010
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
     server: 104.31.16.104
     port: 8080
@@ -127,83 +50,26 @@ proxies:
       path: /
       headers:
         host: asan3.azad1.tech
-  - &id011
-    name: 🇬🇮_GI_直布罗陀_1
+  - &id004
+    name: 🇬🇧_GB_英国_1
     type: vmess
-    server: 95.164.8.106
-    port: 80
+    server: 172.99.190.109
+    port: 443
     cipher: auto
-    uuid: c1ebe8c7-bdd9-4aca-a2f7-01bea79279b3
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /vmess
-      headers:
-        host: ee2-vmess.sshmax.xyz
-  - &id012
-    name: 🇰🇷_KR_韩国
-    type: trojan
-    server: 103.214.68.57
-    port: 10003
-    udp: true
-    password: 6x8HcghsjS
-    sni: yes998.chickenkiller.com
-    skip-cert-verify: true
-    network: tcp
-  - &id013
+      path: linkvws
+  - &id005
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: 94.131.10.135
+    server: 172.67.217.144
     port: 80
     cipher: auto
-    uuid: 099b5b7a-9d71-43cd-80e3-b8fbe1cc2695
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: pt2-vmess.sshmax.xyz
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id014
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 91.242.229.69
-    port: 2086
-    cipher: auto
-    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: nl1.xv2ray.net
-  - &id015
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: pt2-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: 099b5b7a-9d71-43cd-80e3-b8fbe1cc2695
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: pt2-vmess.sshmax.xyz
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: pt2-vmess.sshmax.xyz
-  - &id016
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.17.184.241
-    port: 2095
-    cipher: auto
-    uuid: 0f42a063-315b-4524-8501-469c51838bb6
+    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -211,8 +77,8 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mgone_cdn.yunjisuan.cf
-  - &id017
+        host: lv1.xv2ray.net
+  - &id006
     name: 🇮🇶_IQ_伊拉克->🇹🇷_TR_土耳其
     type: vmess
     server: 130.193.166.2
@@ -227,85 +93,178 @@ proxies:
       path: /@forwardv2ray
       headers:
         host: soft8989.redirectme.net
-  - &id018
-    name: 🇫🇷_FR_法国
+  - &id007
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 104.18.15.150
+    port: 80
+    cipher: auto
+    uuid: 4899b015-5823-486d-bfe6-06c3239260f5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id008
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 162.159.200.6
+    port: 80
+    cipher: auto
+    uuid: 4899b015-5823-486d-bfe6-06c3239260f5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id009
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 162.159.200.7
+    port: 80
+    cipher: auto
+    uuid: 4899b015-5823-486d-bfe6-06c3239260f5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.visaapp.top
+  - &id010
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.144.2.113
+    port: 80
+    cipher: auto
+    uuid: 4899b015-5823-486d-bfe6-06c3239260f5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.apple.com
+  - &id011
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 104.18.15.147
+    port: 80
+    cipher: auto
+    uuid: 4899b015-5823-486d-bfe6-06c3239260f5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id012
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_3
+    type: vmess
+    server: 104.18.15.148
+    port: 80
+    cipher: auto
+    uuid: 4899b015-5823-486d-bfe6-06c3239260f5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id013
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_4
+    type: vmess
+    server: 104.18.15.149
+    port: 80
+    cipher: auto
+    uuid: 4899b015-5823-486d-bfe6-06c3239260f5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id014
+    name: 🇨🇳_CN_中国->🇵🇰_PK_巴基斯坦
+    type: vmess
+    server: 36.212.152.13
+    port: 33311
+    cipher: auto
+    uuid: 83a348a5-c711-4b43-a365-c4ecb94c005c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇨🇳_CN_中国
+    type: ss
+    server: service.ouluyun9803.com
+    port: 21003
+    password: cfa17a0d-5e7d-4871-976e-f116e0818123
+    cipher: chacha20-ietf-poly1305
+  - &id016
+    name: 🇪🇸_ES_西班牙->🇭🇰_HK_香港
+    type: vmess
+    server: 185.214.103.249
+    port: 8002
+    cipher: auto
+    uuid: e096b14e-b746-3dda-bc95-a435b4b2aceb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /db00
+      headers:
+        host: cache-hk-1.cn-db.top
+  - &id017
+    name: 🇮🇪_IE_爱尔兰
     type: trojan
-    server: 35.181.194.132
+    server: 63.35.135.61
     port: 22222
     udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.miwan.co.uk
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇬🇧_GB_英国_2
+    type: trojan
+    server: 18.168.50.183
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
   - &id019
-    name: 🇬🇮_GI_直布罗陀_2
-    type: vmess
-    server: ee2-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: c1ebe8c7-bdd9-4aca-a2f7-01bea79279b3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: ee2-vmess.sshmax.xyz
-  - &id020
     name: 🇺🇸_US_美国_7
-    type: vmess
-    server: cold-dawn-9246.fly.dev
+    type: ss
+    server: 34.222.2.189
     port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id021
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id020
     name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 158.101.7.8
-    port: 80
-    cipher: auto
-    uuid: 95b45c49-f5c0-4959-bb64-2b8fbc4a869c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: 158.101.7.8
-    network: ws
-    ws-opts:
-      path: /
-  - &id022
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id023
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 52.214.208.44
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
-    network: tcp
+    type: ss
+    server: 54.201.23.39
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
 proxy-groups:
   - name: PROXY
     type: select
@@ -352,9 +311,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -380,9 +336,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
   - name: SELECT
     type: select
     proxies:
@@ -406,9 +359,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
